--- a/resources/META-INF/neoforge.mods.toml
+++ b/resources/META-INF/neoforge.mods.toml
@@ -5,15 +5,11 @@ license="GNU GPLv3"
 [[mods]]
 modId="wscommands"
 version="1.0.2"
-displayName="World Start Commands and Global Configs"
-displayURL="https://mcreator.net"
-credits="Created using mod maker MCreator - https://mcreator.net/about"
+displayName="World Start Commands and Global Gamerules"
+displayURL="https://github.com/acewins727/WSCommands"
 authors="acewins"
 description="Runs commands on world creation!"
 displayTest="IGNORE_SERVER_VERSION"
-
-# Start of user code block mod configuration
-# End of user code block mod configuration
 
 [[dependencies.wscommands]]
     modId="neoforge"
@@ -28,9 +24,3 @@ displayTest="IGNORE_SERVER_VERSION"
     versionRange="[1.20.6]"
     ordering="AFTER"
     side="BOTH"
-
-
-
-
-# Start of user code block dependencies configuration
-# End of user code block dependencies configuration
