--- a/1.20.1/resources/META-INF/neoforge.mods.toml
+++ b/1.20.1/resources/META-INF/neoforge.mods.toml
@@ -1,10 +1,10 @@
 modLoader="javafml"
-loaderVersion="[47,)"
+loaderVersion="[2,)"
 license="GNU GPLv3"
 
 [[mods]]
 modId="wscommands"
-version="1.0.4"
+version="1.0.5"
 displayName="World Start Commands and Global Configs"
 displayURL="https://mcreator.net"
 credits="Created using mod maker MCreator - https://mcreator.net/about"
@@ -16,9 +16,16 @@ displayTest="IGNORE_SERVER_VERSION"
 # End of user code block mod configuration
 
 [[dependencies.wscommands]]
+    modId="neoforge"
+    type="required"
+    versionRange="[20.6.117,)"
+    ordering="AFTER"
+    side="BOTH"
+
+[[dependencies.wscommands]]
     modId="minecraft"
-    mandatory=true
-    versionRange="[1.20.1]"
+    type="required"
+    versionRange="[1.20.6]"
     ordering="AFTER"
     side="BOTH"
 
